--- a/source/reflections/reflection-2.html.md.erb
+++ b/source/reflections/reflection-2.html.md.erb
@@ -13,20 +13,19 @@
 
 # Reflection #2: 15 hours
 
-After roughly fifteen hours of practice for each keyboard, the design of the experiment has been challenged along with my expectations. To cover all of the bases, I'll reflect on my progress on each exercise set, which I'll follow with a set of musings on amendments to the exercise.
+After roughly fifteen hours of practice for each keyboard, the design of the experiment has been challenged along with my expectations. To cover all the bases, I’ll reflect on my progress on each exercise set, which I’ll follow with a set of musings on amendments to the exercises.
 
 ## Reflecting on progress
 
 ### Scales
 
-This set of exercises is indubitably staying in the repertoire. The traditional keyboard seems to be progressing as expected. I am considering practicing the C Major scale more because it is what I use in every other exercise, and it uses the same finger crosses as all of the other scales that I am practicing.
+The traditional keyboard is progressing as expected. I am considering practicing the C Major scale more because it is what I use in every other exercise. It also uses the same finger crosses as all the other scales that I am practicing.
 
-The LIK has been progressing a bit slower than expected. The major scale has proven to be difficult, and I underestimated the difficulty of playing without looking at my fingers. Particularly cross under with my thumb on my left hand when descending has been difficult to do by sight. It is a whole step cross (unlike the right thumb cross when ascending), which makes it difficult because I'm further from my point of reference (the note my middle or fourth finger played before the cross). The cross is the primary reason why I'm not able to play with my eyes closed. This raises questions about the difficulty of playing on a keyboard with not physical landmarks, with the only differences between the keys being colors.
+The LIK has been progressing slower than expected. The major scale has proven to be difficult, and I underestimated the difficulty of playing without looking at my fingers. Crossing with my thumb when descending with my left hand has been particularly difficult. It is a whole step (unlike the right thumb cross when ascending), which makes it more difficult because I'm further from my point of reference (the last note played). This thumb cross is the primary reason why I’m not able to play with my eyes closed.
 
-I also am making an assumption on the LIK that in order to say that I can play the scale in any key, I should be able to play with my eyes closed. Perhaps I'm going too far because of the simplicity it offers. Perhaps I could play in every key at 60bpm if I looked at my fingers, but the time I spend assessing all twelve keys could be put towards learning to play without looking instead.
+Also instead of practicing the major scale in every key, I'm practicing with my eyes closed. If I am able to play at a speed with my eyes closed, I assert that I can play it in every key (because the shape is the same). I'm doing this because of the simiplicity it offers, but it does alter results. I can play any major scale at 60bpm if I looked at my fingers, but I can't yet to it without looking at the keyboard. Regardless, I want to continue practicing this way, because it saves me time. I'm favoring inaccurate results with more practice time and less assessment rather than individually assessing each major key.
 
-Overall, I think that my improvement on the major scale is going slower than expected for the LIK, but it still isn't shocking. I am most surprised by the difficulty of playing with my eyes closed on the LIK.
-
+My improvement on the major scale is going slower than expected for the LIK, but it still isn’t shocking. I am most surprised by the difficulty of playing with my eyes closed on the LIK.
 
 <div class="ct-chart ct-chart--article scales-chart"></div>
 
@@ -38,11 +37,11 @@ Overall, I think that my improvement on the major scale is going slower than exp
 
 ### Hanon
 
-Hanon on the TK is going as expected. I have been consistently improving in small increments for each exercise. Something unexpected is that I am able to play the first exercise faster than I can play the C Major scale (but not much). I am considering moving onto the next exercise before I get too much faster at the current exercises, because I don't think I can expect my Hanon to improve much beyond my current speed with the C Major scale.
+Hanon on the TK is going as expected. I have been consistently improving on each exercise. Something that surprised me is my ability to play the first exercise faster than I can play the C Major scale. I am considering moving onto the next exercise soon rather than pushing the speed for the current exercises. I don’t expect my Hanon to improve much beyond my current speed with the C major scale.
 
-Hanon is very difficult for the LIK. Hanon on the TK has one ascending pattern to learn and one descending pattern to learn, but the the TK has seven in each direction. I know whether the interval is a second or a third, but on the LIK I need to use my ears and eyes to determine whether it is minor or major.
+Hanon is very difficult for the LIK. On the TK, Hanon exercises have one ascending pattern and one descending pattern, but the TK has seven patterns for each direction. I know whether the interval is a second or a third, but on the LIK I need to use my ears and eyes to determine whether the interval is minor or major.
 
-The very reason this exercise is difficult for the LIK is the reason why it is exciting. I feel as if I am training my ears to better recognize these small intervals, and better training my fingers to play these intervals on command. It makes me wonder how difficult the next exercises will be once I can play this up to tempo, as Hanon exercises share a lot of similarities.
+The very reason this exercise is difficult for the LIK is the reason why it is exciting. I am training my ears to better recognize these small intervals and training my fingers to play these intervals on command. I'm curious how difficult the next exercises will be once I can play the first exercise up to tempo, as Hanon exercises share a lot of similarities.
 
 <div class="ct-chart ct-chart--article hanon-chart"></div>
 
@@ -54,8 +53,7 @@ The very reason this exercise is difficult for the LIK is the reason why it is e
 
 ### Sight reading
 
-Sight reading is going about as I expected to go: considerably better for the traditional keyboard than for the LIK. The LIK is fine if the ambitus isn't much larger than a 5th, because then it allow me to set my hands before I sight read, mostly noting the intervals (whether it is stepwise or a leap) rather than paying attention to the notes or the exact intervals (whether an interval is a minor or major second).
-
+Sight reading is going as expected: better for the traditional keyboard than for the LIK. The LIK is fine if the ambitus isn’t much larger than a 5th, because then it allow me to set my hands before I sight read. I can then pay attention to whether the interval is a step or a leap rather than paying attention to the notes or the exact intervals (whether an interval is a minor or major second). When the ambitus is larger than a 5th, I cannot have my fingers set for the exercise, and I have to pay more attention to notes and exact intervals. This is much more difficult.
 
 <div class="ct-chart ct-chart--article sight-reading-chart"></div>
 
@@ -67,11 +65,11 @@ Sight reading is going about as I expected to go: considerably better for the tr
 
 ### Playing by ear
 
-The keyboards are almost equitable in this regard. Only in the last practice session did the TK overtake the LIK. My hypothesis is that it is because it is slightly easier to identify the C major scale on the TK, thus taking up slightly less of my mental energy when I visualize my performance on the keys (while listening to the melody).
+The keyboards are almost equal when it comes to playing by ear. Only in the last practice session did the TK overtake the LIK. Since it is easier to identify the C major scale on the TK, it is easier for me to visualize my performance on the keys while listening to the melody.
 
-I predicted that the LIK would improve faster than the TK, though I am not surprised that the advantage has not manifested while practicing only the C major scale. I still predict that the LIK might have an advantage when practicing other scales, and I am confident it will have an advantage when playing chromatic excerpts.
+I predicted that the LIK would improve faster than the TK, though I am not surprised that the advantage has not manifested while practicing the C major scale. I still predict that the LIK could have an advantage when practicing other scales, and I am confident it will have an advantage when playing chromatic excerpts.
 
-The thing that has surprised me the most with these exercises is the extent that I understand the questions as functions of key they are in. When I would play by ear on saxophone, I had much less of an idea as to where I was in the scale, and I would play with more instinct than understanding. My assumption is that the more that this tonal awareness is a factor, the less of an advantage the LIK will have when it comes to playing by ear.
+I am surprised by the extent that I understand the excerpts as functions of key they are in. When I played by ear on saxophone, I had much less of an idea about where I was in the scale, and I would play with more instinct than understanding. But when playing by ear on both pianos, I am aware of my location in the scale and use that knowledge to help find the right notes. My assumption is that the more that this tonal awareness is a factor, the less of an advantage the LIK will have when it comes to playing by ear.
 
 <div class="ct-chart ct-chart--article playing-by-ear-chart"></div>
 
@@ -83,36 +81,34 @@ The thing that has surprised me the most with these exercises is the extent that
 
 ## On practicing
 
-### Improvement vs. metrics
+### Improvement vs metrics
 
-In a recent practice session, I noticed how much of my time on the TK was spent assessing how fast I could play the scales rather than practicing the scales a tempo that was optimal for my improvement. Although playing imperfectly at these high speeds is necessary for gauging my progress, I think that the assessment itself is not nearly as helpful as slow deliberate practice, and it might actually be slightly harmful (as I am practicing playing the scales imperfectly).
+In a recent practice session, I noticed how much of my time on the TK was spent assessing the scales rather than practicing. Although playing at these high speeds is necessary for gauging my progress, the assessment itself is not as helpful as slow deliberate practice. It might actually be harmful (as I am practicing playing the scales imperfectly).
 
 Because of this, I would like to spend more of my time practicing and less time assessing my improvement. I would rather have inaccurate data due to infrequent assessing than have more accurate data that hinders my improvement.
 
 ### Practice and increments in general
 
-Determining when I have completed a increment is something that is rather subjective, important to the experiment, and I have not yet
+The decision of what increments to practice and when to deem them “completed” is based on my beliefs of how to best practice.
 
-The decision of what increments to practice and when to deem them "completed" is based on my beliefs of how to best practice.
-
-I believe that the best way to practice performance is to do so at a tempo where you can practice the performance at the desired quality a vast majority of the time. I believe that playing something wrong is practicing it wrong, so the tempo must be slow enough to avoid most mistakes (while being fast enough to get some repetition of the correct performance a number of times). I also don't think that I should expect this level of perfection when considering whether or not I have completed an interval. Although I do want to get to the point where I can play quickly with perfect dynamic control, articulation and timing, I am going to consider if I can play the notes correctly while staying in time good enough. These ideas dictate how I increment my practice with fundamentals.
+I believe that the best way to practice performance is to do so at a tempo where you can practice the performance at the desired quality a vast majority of the time. Playing something wrong is practicing it wrong, so the tempo must be slow enough to avoid most mistakes. I also don’t think that I should expect this level of perfection when considering if I have completed an interval. I do want to get to the point where I can play with perfect dynamic control, articulation and timing, but for now if I can play the notes while staying in time, it is good enough. I don't strive for perfection when achieving increments because perfection requires ancillary skills that I do not have. I cannot play any keyboard with perfect dynamics and articulation. If I were to wait for this ability before logging any improvement, I wouldn't be recording improvement that the keyboards are making. These ideas dictate how I increment my practice with fundamentals.
 
 <div class="image-container">
   <img src="/images/csik-flow-chart.png" />
 </div>
 
-If you were to look at a chart of challenge and skill from Csikszentmihalyi's Flow, I believe that believe that fundamentals are best practice closer to the state of boredom rather than flow because that is where we make the least mistakes (and the challenge is not get bored). However for strengthening skills that challenge calculation rather than performance, I would agree with Csikszentmihalyi that the ideal state is that of flow, a balance between challenge and skill, anxiety and boredom.
+Above is a chart of challenge and skill from Csikszentmihalyi’s Flow. I believe that fundamentals are best practice closer to the state of boredom rather than flow because that is where we make the least mistakes. The challenge should be to not get bored. However, when strengthening skills of calculation rather than performance (like sight reading and playing by ear), I would agree that the ideal state flow: a balance of challenge and skill, and anxiety and boredom.
 
-While I can get great at playing a scale by playing it slowly and perfectly over and over, I do not think that I can become a great sight reader by sight reading easy music 100% correctly, and instead the challenges should be pushing the limits of my skill. This is why when I practice sight reading and playing by ear, I practice one increment of difficulty above where I can perform rather than a level far below.
+While I can get great at playing a scale by playing it slowly over and over, I do not think that I can become a great sight reader by only sight reading easy music. Instead the challenges should be pushing the limits of my skill. This is why when I practice sight reading and playing by ear, I practice the increment of difficulty above where I can perform rather than a level far below.
 
-### Restructuring my increments and assessment
+## Restructuring my increments and assessment
 
-I don't think that the increments that I chose for sight reading and playing by ear are ideal for my improvement. Notably, they are far too fast (especially for the LIK). I can barely play the major scale with eighth notes at 60 bpm and I'm sight reading sixteenth notes.
+I don’t think that the increments that I chose for sight reading and playing by ear are ideal for my improvement. They are far too fast (especially for the LIK). I can barely play the major scale with eighth notes at 60 bpm, yet I’m sight reading sixteenth notes.
 
-Even with playing by ear, occasionally the errors in my LIK performance are caused by my inability to execute at the given speed. In these exercises I want to be testing my ear and it's translation to the keyboard, not my ability to perform on the keyboard (as this is what the fundamentals assess).
+Even with playing by ear, occasionally the errors in my LIK performance are caused by my inability to execute at the given speed. In these exercises I want to be testing my ear and it’s translation to the keyboard, not my ability to perform on the keyboard (as this is what the fundamentals assess).
 
-To make the matter slightly more confusing, I have been changing the note values in the different exercises. Earlier in the practice sessions I had half notes and no sixteenth notes in the exercises, but later I made the decision to remove the half notes and include the sixteenth notes. Overall, I think that it is good that I removed the half notes, they decrease the difficulty of a given exercise significantly. With both sixteenth notes and half notes included, the difficulty of exercises could vary wildly.
+To make the matter more confusing, I have been changing the note values in the different exercises. Earlier, I had half notes and no sixteenth notes in the exercises, but later I made the decision to remove half notes and include sixteenth notes. Removing the half notes was a good idea, as they decrease the difficulty of a given exercise significantly. With both sixteenth notes and half notes included, the difficulty of exercises were inconsistent.
 
-Editing this reflection a few months later, I can tell you that I did remove both sixteenth notes and half notes from the exercises, so now the excerpts only use quarter and eighth notes. This makes for a much more consistent. You can see that this made the exercises considerably easier, and you can see that I make this change around the fifteenth practice session. Both the LIK and the TK start improving with both playing by ear and sight reading at this point.
+Editing this reflection a few months later, I can tell you that I did remove sixteenth notes and half notes from the exercises. The excerpts now only use quarter and eighth notes. This makes for a much more consistent difficulty. This made the exercises easier, and you can see it reflected in the results around the fifteenth practice session. Both the LIK and the TK start improving with both playing by ear and sight reading at this point.
 
 <% end %>
