--- a/source/reflections/reflection-3.html.md.erb
+++ b/source/reflections/reflection-3.html.md.erb
@@ -13,13 +13,11 @@
 
 # Reflection #3: 33 hours
 
-I have practiced roughly 33 hours on each keyboard, and the results are already fascinating. I have also done a decent amount of reflection, some of which has changed the way I practice the keyboards.
+I have practiced roughly 33 hours on each keyboard, and the results are fascinating. I have also done a decent amount of reflection, some of which has changed the way I practice the keyboards.
 
-## Content
+## Scales
 
-### Scales
-
-The thirty second practice session marked an important point in the progress of the LIK: in regard to the number of completed intervals, my ability to play major scales on the LIK has surpassed my ability to play the major scale on the TK. The improvement of the LIK on major scales started slow as I had difficulty with the fingerings (and still do), but once I was able to play the major scale without looking at 60bpm, the LIKstarted completing many increments. I completed five increments in the first 19 practice sessions (4 hours and 45 minutes of practice), and then I completed another 116 increments in the next 14 practice sessions (3 hours and 30 minutes of practice). To average this out, in the last 14 practice sessions, I've been improving at a rate of 8.29 (116 / 14) increments per practice session, while the TK is sitting at 1.9 (63 / 33) increments per practice session.
+On the 32nd practice session, my ability to play major scales on the LIK has surpassed my ability to play the major scale on the TK. The improvement of the LIK on major scales started slow as I had difficulty with the fingerings. But once I was able to play the major scale without looking at 60bpm, the LIK started completing many increments. I completed five increments in the first 19 practice sessions (4 hours and 45 minutes of practice). In the next 15 practice sessions I completed 116 increments (3 hours and 30 minutes of practice). In the last 14 practice sessions, I’ve been improving at a rate of 8.29 (116 / 14) increments per practice session, while the TK is sitting at 1.9 (63 / 33).
 
 <div class="ct-chart ct-chart--article scales-chart"></div>
 
@@ -29,15 +27,15 @@ The thirty second practice session marked an important point in the progress of 
   createChart('.scales-chart', scales_data);
 </script>
 
-The LIK might slow down at it approaches the fastest tempo that I can play on the TK, but even the LIK will continue to outpace the TK with the advantage of transposition.
+The LIK might slow down at it approaches the fastest tempo that I can play on the TK, but even then the LIK will continue to outpace the TK due to the advantage of transposition.
 
-This is quite exciting, and it's interesting to compare theoretical numbers with. [My hypothesis](https://likeyboard.io/articles/the-hypotheses/) is that the LIK will improve at 3.58 times the pace, and currently the LIK is improving at 4.34 (8.29 / 1.91) times the speed of the TK.
+This is quite exciting, and it’s interesting to compare theoretical numbers with. [<ins>My hypothesis</ins>](https://likeyboard.io/articles/the-hypotheses/) is that the LIK will improve at 3.58 times the pace, and currently the LIK is improving at 4.34  (8.29 / 1.91) times the speed of the TK.
 
-### Hanon
+## Hanon
 
-The TK is improving at a pretty constant rate while the LIK hasn't had any notable improvement at all. However, the more I ruminate on this, the less it surprises me. There are two things holding the LIK back: the speed of playing scales and the variation of patterns.
+The TK is improving at a pretty constant rate while the LIK hasn’t had any notable improvement at all. The more I ruminate on this, the less it surprises me. There are two things holding the LIK back: the speed of playing scales and the variation of patterns.
 
-On the TK I can play the C major scale with sixteenth notes at 80bpm, and I can play the Hanon exercises right around that speed. The LIK can only play the C major scale at 100bpm in eighth notes, so I would expect that the LIK would have to be able to play at least sixteenth notes at 60bpm to play the first (and slowest) Hanon increment. However, currently I can play the C Major scale at 100bpm (eighth notes), but I can only play the first exercise with eighth notes at 69 bpm. I think that the reason for this is that Hanon is more complex on the LIK.
+On the TK I can play the C major scale with sixteenth notes at 80bpm, and I can play the Hanon exercises at about the same speed. The LIK can only play the C major scale at 100bpm in eighth notes. I would expect that the LIK would have to be able to play at sixteenth notes at 60bpm to play the first (and slowest) Hanon increment. Right now I can play the C Major scale at 100bpm (eighth notes), but I can only play the first exercise with eighth notes at 69 bpm. This discrepancy of tempos is larger than the TKs. I think that the reason for this is that Hanon is more complex on the LIK.
 
 <div class="ct-chart ct-chart--article hanon-chart"></div>
 
@@ -47,13 +45,13 @@ On the TK I can play the C major scale with sixteenth notes at 80bpm, and I can 
   createChart('.hanon-chart', hanon_data);
 </script>
 
-We can see a difference in complexity when we consider the number of patterns that each keyboard has to learn for a Hanon exercise. When playing the TK you have to learn two unique shapes, the ascending pattern and the descending pattern. On the LIK you have to learn fourteen unique shapes as the ascending and descending shapes are different for each starting note. There are similarities between these fourteen patterns, but they are still unique.
+When playing the TK you have to learn two unique shapes, the ascending pattern and the descending pattern. On the LIK you have to learn fourteen unique shapes. The ascending and descending shapes are different each of the seven starting notes. There are similarities between these fourteen patterns, but they are still unique.
 
-My hypothesis is that I am still improving at the rate of 2.33 times the speed of the TK, but the LIK is practicing fourteen patterns rather than two. In addition, [I hypothesized](https://likeyboard.io/articles/the-hypotheses/) that this advantage (of the LIK having 2.33 times fewer shapes than the TK) will not be manifest itself until I have practiced a considerable amount of both keyboards.
+I think that I am still improving at 2.33 times the rate of the TK, but it isn't realized because the Hanon is more complex on the LIK. [<ins>I hypothesized</ins>](https://likeyboard.io/articles/the-hypotheses/) that this advantage will not be manifest until I have practiced a considerable amount, and so far it is coming true.
 
-### Sight reading
+## Sight reading
 
-Since removing sixteenth notes from the exercises, both the TK and the LIK have begun improving at a steady pace with the TK consistently in the lead. Currently the LIK has completed seven increments while the TK has completed twelve. Eighteen practice sessions ago the gap was two increments apart, and the gap has widened to five increments.
+Since removing sixteenth notes from the exercises, both the TK and the LIK have begun improving at a steady pace. The TK is currently in the lead with twelve completed increments while the LIK only has seven. Eighteen practice sessions ago the gap was two increments apart, and the gap has widened to five increments.
 
 <div class="ct-chart ct-chart--article sight-reading-chart"></div>
 
@@ -63,41 +61,43 @@ Since removing sixteenth notes from the exercises, both the TK and the LIK have 
   createChart('.sight-reading-chart', sight_reading_data);
 </script>
 
-I do have concerns about the increments, as I am going to be increasing the largest interval from the fourth all the way up to the full pitch range of the keyboard (although EarMaster seems to limit leaps to about an octave and half). I wonder if that will be too difficult, especially if the leaps are strung together. This will be difficult for both keyboards, but the LIK might struggle even more as the lack of distinct shapes makes it so there are no reference points that can be felt, only seen. This same incrementing also applies to playing by ear, but I am not as concerned as I think it'll be easier to make larger leaps playing by ear instead of sight reading.
+I do have concerns about the increments I chose. I am going to increase the largest interval from a fourth to an octave. After an octave I'll do the full pitch range (although EarMaster seems to limit leaps to about an octave and half). I wonder if that will be too difficult, especially if the leaps are strung together. This will be difficult for both keyboards, but the LIK might struggle even more. The lack of distinct shapes on the LIK makes it so you cannot feel where you are on the keyboard. Playing by ear shares similar increments, but I am not as concerned because larger leaps should be easier when playing by ear instead of sight reading.
 
-## Reflecting and improving
+### Reflecting and improving
 
-### Sight reading
+I did some reflection on my process of sight reading, and how I could improve on each keyboard. I disucssed what I found in [<ins>The Hypotheses</ins>](https://likeyboard.io/articles/the-hypotheses/). The gist of it is that I don’t determine true intervals (minor 3rd vs major 3rd) when sight reading. Instead I determine the rough interval (2nd or 3rd) and find the white key the appropriate distance away. Only then do I augment or diminish the note depending on the key signature and accidentals.
 
-I did some reflection on my process of sight reading, and how I could improve on each keyboard. What I found is discussed in [The Hypotheses](https://likeyboard.io/articles/the-hypotheses/), but the gist of it is that I don't determine the true interval (minor 3rd vs 3rd) between note when sight reading, and instead find the white key that has the distance of the interval, and then I augment or diminish the note depending on the key signature and accidentals. I figured that for the traditional keyboard, I could improve my sight reading by practicing identifying the exact note names. To practice this, I have begun singing the note names while sight reading.
+I figure that for the traditional keyboard, I can improve my sight reading by practicing identifying the exact note names. The note names often signal the alteration of the rough interval. To practice this, I have begun singing the note names while sight reading.
 
-Improving sight reading on the LIK was a bit more difficult. My traditional method of sight reading is not suited for the LIK, where white keys feel identical to black keys, thus identification of the exact interval is key.
+Improving sight reading on the LIK was a bit more difficult. My traditional method of sight reading is not suited for the LIK, where white keys feel identical to black keys. Identification of the exact interval is essential. 
 
-I was brainstorming better ways to keep interval awareness while sight reading with the LIK, and I realized that it is similar to sight singing. When singing you have to know the exact interval between two notes, or you have to have such tonal awareness that you can sing the note with no knowledge of this interval. A lot of singers train this tonal awareness (and perhaps identification of intervals) with solfege.
+I was brainstorming better ways to keep interval awareness, and I realized that playing the LIK is similar to sight singing. When singing you either have to know the exact interval between two notes, or you have to have tonal awareness so you can sing the note with no knowledge of this interval. For instance if I am singing 4th note of a major key and the next note to sight read is the seventh. I can recognize that the interval between the two notes is a tritone and find the seventh that way, or I can identify the next note as the 7th and sing that.
 
-Going forward, when sight reading on the LIK I will try to sing the excerpts in solfege to be more cognisant of the true intervals between notes.
+The latter strategy can be easier, so when sight reading vocalists often use solfege to aid their awareness of where they are in the key.
 
-### Playing by ear
+Going forward, I will try to sing the excerpts in solfege when sight reading on the LIK. I hope that this will help me 
 
-Similar to sight reading, the removal of sixteenth notes from the exercise prompted a stream of measurable improvements from both keyboards. The TK is better than the LIK, but it has not been improving considerably faster; it has been hovering around an advantage of three intervals, the TK having completed 14 and the LIK 11.
+## Playing by ear
 
-My hypothesis of the LIK improving at 1.8125 times the speed of the TK has proven not be true so far, and I think that the reason why is because I am not solely identifying notes by the interval, but also with tonal awareness. I am surprised by the extent to which I find notes by tonal position, as it is pretty easy to identify certain notes like the tonic or the 7th. Instead of determining how large the leap is, I identify the note by its position relative to the tonic. This seems to help me more on the TK, as it is easier to find notes on that keyboard.
+Like sight reading, the removal of sixteenth notes from the exercises prompted a stream of measurable improvements on both keyboards. The TK is better than the LIK, but it has not been improving faster. The TK has been hovering around an advantage of three intervals having completed 14 increments to the LIK's 11.
 
-However, I have noticed with increasing frequency that there are times when I don't have this tonal awareness and I am able to play a leap by listening to interval and using muscle memory. I think that this is the manifestation of the 1.8125 times advantage, solely determining the shape by the sound of the interval. I predict that I will improve at playing by ear this way, especially on the LIK, and the LIK could start to surpass the traditional keyboard.
+My hypothesis of the LIK improving at 1.8125 times the speed of the TK has proven not be true so far. I think that the reason why is because I am not only identifying notes by the interval, but also with tonal awareness. I am surprised by the extent to which I find notes by tonal position, as it is pretty easy to identify certain notes like the tonic or the 7th. Instead of determining how large the leap is, I identify the note by its position relative to the tonic. This seems to help me more on the TK, as it is easier to find notes on that keyboard.
 
-### Deciding when to increase difficulty
+But, I have noticed that as I improve I use the tonal awareness less and less. The more I practice, the more I am able to play a leap by instinct. I think that this is the manifestation of the 1.8125 times advantage. I predict that I will improve at playing by ear this way, especially on the LIK, and the LIK could start to surpass the traditional keyboard. 
 
-For a while, deciding when to increase the difficulty for these exercises has been painfully subjective and subject to luck. I would try to guess when a more difficult increment would be beneficial based on my performance, and that performance would vary depending on the difficulty of the generated excerpts.
+## Deciding when to increase difficulty
 
-I have shored up some of these weaknesses with a new method of determining when to increment. I am going to follow EarMaster 7's recommendation of moving on when I get an exercise 90% correct. Previously after 15 exercises EarMaster would give a summary of my performance, and if I chose to repeat the exercise I would receive a separate score to on the next 15 excerpts. I decided to increase the number of excerpts per assessment to 50 (the maximum) in order to guard against randomness.
+For a while, deciding when to increase the difficulty for these exercises has been subjective and subject to luck. I would try to guess when a more difficult increment would be beneficial based on my performance. The issue is that my performance varies depending on the difficulty of the generated excerpts.
 
-I also figured out ways to retry a problem without receiving a grade on the second attempt. This helps because often my scores would be skewed higher, as I repeat anything I make a mistake on until it is perfect.
+I have shored up some of these weaknesses by coming up with a a new method to determine when I have completed an increment.  Before, after 15 exercises EarMaster would give a summary of my performance, and I would decide whether to move on or repeat the exercise. Now, I am going to follow EarMaster 7’s recommendation of moving on when I get an exercise 90% correct. I am also going to increase the number of excerpts per assessment to 50 (the maximum) so I have a large enough sample size.
 
-This objective measure of performance from EarMaster will aid me greatly in determining when to move on, especially when increments get less noticeable (such as increasing speed from 60 to 63 bpm).
+In addition, I figured out how to retry a problem without receiving a grades on the later attempts. This helps because I generally want to repeat everything until I can play it well, but these retries skewed my results.
+
+This new measure of performance from EarMaster will aid me in determining when to move on to the next increment.
 
 ## Conclusion
 
-This point of reflection has been one of the most interesting parts of this experiment so far. The LIK has surpassed the TK in scales at a rate that is faster than I predicted, and my slow improvement at the other exercises on the LIK has lead me to insights about the complexity of Hanon and my methods of sight reading that change both my predictions of future improvement and my methods of practicing the exercises.
+This point of reflection has been one of the most interesting so far. The LIK has surpassed the TK in scales at a rate that is faster than I predicted. My slow improvement at other exercises on the LIK has lead me to insights about the complexity of Hanon and my methods of sight reading. These insights changed my predictions of future improvement and my methods of practicing the exercises.
 
 I have taken a break from practicing to work on this site and rewrite the articles, but I am excited to get back to practicing and find what new insights the next practice sessions have to offer.
 
