Add another automatic scroll to the next section.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,7 +12,7 @@ title: The Linear Isomorphic Keybaord
 
 
 <!-- Hero -->
-<div class="hero">
+<div class="hero js-hero">
   <div class="container">
     <div class="row">
       <div class="col-12 hero__text-space js-first-hero-text">
@@ -142,4 +142,4 @@ title: The Linear Isomorphic Keybaord
 </div>
 
 <script>var data = <%= all_progress.to_json %></script>
-<script src="/javascripts/pages/application-index.js"></script>
+<script src="/javascripts/pages/homepage.js"></script>
